src/test/deca/syntax/invalid/lexer/flottants_lex-lex.corr
INT: [@0,320:320='0',<45>,14:0]
INT: [@1,322:325='1234',<45>,15:0]
FLOAT: [@2,327:334='123.5e+4',<46>,16:0]
FLOAT: [@3,336:345='543.5E-12f',<46>,17:0]
FLOAT: [@4,347:354='63423.0F',<46>,18:0]
FLOAT: [@5,356:367='0xABCDE.FP-1',<46>,19:0]
FLOAT: [@6,369:394='0Xabcdef0123456789.5EDp+5f',<46>,20:0]
FLOAT: [@7,396:402='0X1.2P1',<46>,21:0]
PLUS: [@8,471:471='+',<5>,25:0]
INT: [@9,472:474='123',<45>,25:1]
MINUS: [@10,476:476='-',<6>,26:0]
INT: [@11,477:479='123',<45>,26:1]
INT: [@12,481:481='0',<45>,27:0]
IDENT: [@13,482:485='x1p1',<47>,27:1]
INT: [@14,576:576='0',<45>,31:0]
IDENT: [@15,577:578='x1',<47>,31:1]
DOT: [@16,579:579='.',<10>,31:3]
INT: [@17,580:580='0',<45>,31:4]
IDENT: [@18,581:582='pA',<47>,31:5]
INT: [@19,635:635='0',<45>,35:0]
IDENT: [@20,636:637='x1',<47>,35:1]
DOT: [@21,638:638='.',<10>,35:3]
INT: [@22,639:639='0',<45>,35:4]
INT: [@23,682:682='0',<45>,38:0]
INT: [@24,683:683='0',<45>,38:1]
INT: [@25,684:684='0',<45>,38:2]
INT: [@26,685:685='0',<45>,38:3]
INT: [@27,752:752='0',<45>,42:0]
IDENT: [@28,753:754='xG',<47>,42:1]
DOT: [@29,755:755='.',<10>,42:3]
INT: [@30,756:756='0',<45>,42:4]
IDENT: [@31,757:758='p1',<47>,42:5]
